Refactor: added separate methods to reduce code in addSandwich method